--- a/src/app.css
+++ b/src/app.css
@@ -66,6 +66,9 @@
  
     --ring: 212.7 26.8% 83.9%;
   }
+  .editor {
+    @apply bg-muted text-muted-foreground p-4 rounded-lg;
+  }
 }
  
 @layer base {
